We could trim some of this fat by calling shrinkToFit() on StyleSheetContents::m_childRules at the end of parseSheet().
<rdar://problem/12394892>
Created attachment 166255 [details] Patch
Comment on attachment 166255 [details] Patch Attachment 166255 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/14064320 New failing tests: http/tests/workers/terminate-during-sync-operation.html
Comment on attachment 166255 [details] Patch Clearing flags on attachment: 166255 Committed r129907: <http://trac.webkit.org/changeset/129907>
All reviewed patches have been landed. Closing bug.