471kB below StyleSheetContents::parserAppendRule() on Membuster3. <http://webkit.org/b/97916>

Reviewed by Anders Carlsson.

Shrink-to-fit the StyleSheetContents rule vectors at the end of CSSParser::parseSheet().
~100kB progression on Membuster3.

* css/StyleSheetContents.h:
* css/StyleSheetContents.cpp:
(WebCore::StyleSheetContents::shrinkToFit):
* css/CSSParser.cpp:
(WebCore::CSSParser::parseSheet):


Canonical link: https://commits.webkit.org/115914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129907 268f45cc-cd09-0410-ab3c-d52691b4dbfc